Closed Bug 1928255 Opened 1 year ago Closed 1 year ago

The address bar was shown in full screen mode and was shown higher than normal after exiting full screen

Categories

(Firefox :: Address Bar, defect, P1)

Firefox 134
defect

Tracking

()

VERIFIED FIXED
134 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox132 --- unaffected
firefox133 --- verified
firefox134 + verified

People

(Reporter: matt.fagnani, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [fidefe-sidebar])

Attachments

(2 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:134.0) Gecko/20100101 Firefox/134.0

Steps to reproduce:

I ran Firefox 134.0a1 20241030214633 on Wayland in Plasma 6.2.2 in a Fedora 41 KDE installation. I had the title bar and menu bar enabled previously. I selected the View menu in the menu bar then Full Screen in the View menu on various sites. I exited full screen by moving the mouse to the top of the screen, right-clicking, then selecting Exit Full Screen Mode in the context menu.

Actual results:

The address bar was shown in full screen mode while it didn't used to be with previous 134.0a1 builds. The part of the address bar with the URL wasn't visible sometimes depending on the background colour. After I exited full screen mode, the address bar was shown higher than normal and mostly overlapped the tab bar instead of the toolbar. The address bar returned to the correct position in the toolbar after I interacted with some other parts of Firefox's interface like the menu bar.

134.0a1 20241030093012 didn't show this problem. I bisected with mozregression. The first bad change was for Bug 1927111

12:20.90 INFO: Narrowed integration regression window from [13537ae6, 4de5fe0d] (3 builds) to [13537ae6, aa2b4302] (2 builds) (~1 steps left)
12:20.90 INFO: No more integration revisions, bisection finished.
12:20.90 INFO: Last good revision: 13537ae67079d33202b6570bb5a61d4ee652fecb
12:20.90 INFO: First bad revision: aa2b4302bdccdbfd659158479d68c4f377237e6c
12:20.90 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=13537ae67079d33202b6570bb5a61d4ee652fecb&tochange=aa2b4302bdccdbfd659158479d68c4f377237e6c

Expected results:

The address bar shouldn't have been shown in full screen mode. After I exited full screen mode, the address bar should've been shown in the normal position in the toolbar.

Component: Untriaged → Address Bar
Keywords: regression
Regressed by: 1927111

:emilio, since you are the author of the regressor, bug 1927111, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

I was able to reproduce on Nightly 134.0a1 (2024-10-30) Ubuntu 24.0. Noting that with sidebar.revamp enabled and switching from vertical to horizontal tabs in full-screen mode it was also possible to get into a state where the address bar was completely hidden. Getting the address bar back was possible exiting full-screen mode and toggling from vertical tabs to horizontal tabs and back again.

I can also see similar issues on Windows 11 Nightly 134.0a1 (2024-10-30) too , toggling full-screen with F11. It's possible to get the address bar over the top of horizontal tabs in some cases after leaving full-screen and the issues are similar to those described for Linux with different interactions going between horizontal and vertical tabs settings with sidebar.revamp enabled.

Tracking for Fx134.
The regressor Bug 1927111 is a blocker for Fx133 and we'll need an uplift of that for beta.
However, only after the issue here has been investigated.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Whiteboard: [fidefe-sidebar]

The bug is marked as tracked for firefox134 (nightly). However, the bug still isn't assigned.

:cbellini, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit BugBot documentation.

Flags: needinfo?(cbellini)
Duplicate of this bug: 1928292
Severity: -- → S2
Flags: needinfo?(cbellini)
Priority: -- → P1

I want to mimic what anchor positioning will eventually do, and this is
how anchor positioning would behave. I want to use this to avoid having
to hack around it in a different way.

Assignee: nobody → emilio
Status: NEW → ASSIGNED

Keep using the static position as we did before. As long as we don't
have anchor positioning this seems better than whack-a-mole-ing every
possible urlbar position change.

In order to make the fullscreen animation work, make our position
computation ignore transforms, which is how anchor positioning would
behave anyways.

Duplicate of this bug: 1928491
Flags: needinfo?(emilio)
Duplicate of this bug: 1928861
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/713f345e7d3d Add an option to ignore transforms to GeometryUtils. r=layout-reviewers,webidl,saschanaz,jwatt https://hg.mozilla.org/integration/autoland/rev/9e7426475532 Fix bug 1927111 in a better way. r=urlbar-reviewers,mak
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 134 Branch

I was able to reproduce the issue on Nightly 134.0a1 (2024-10-30) Ubuntu 24.04 and Windows 11 by following the STR from Comment 0.

The issue is fixed on Firefox 134.0a1 (2024-11-04) on the same systems.

Status: RESOLVED → VERIFIED
See Also: → 1928992

Comment on attachment 9434943 [details]
Bug 1928255 - Add an option to ignore transforms to GeometryUtils. r=#layout,#webidl

Beta/Release Uplift Approval Request

  • User impact if declined/Reason for urgency: Needed if we need to uplift the regressor.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It goes back to current beta behavior, mostly (except for the fix for fullscreen animation).
  • String changes made/needed: none
  • Is Android affected?: No
Attachment #9434943 - Flags: approval-mozilla-beta?
Flags: qe-verify+
Attachment #9434944 - Flags: approval-mozilla-beta?

Comment on attachment 9434943 [details]
Bug 1928255 - Add an option to ignore transforms to GeometryUtils. r=#layout,#webidl

Approved for 133.0b6

Attachment #9434943 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9434944 [details]
Bug 1928255 - Fix bug 1927111 in a better way. r=#urlbar-reviewers

Approved for 133.0b6

Attachment #9434944 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
See Also: 1928992
QA Whiteboard: [qa-triaged]

Verified that the issue is not reproducible on Firefox 133.0b6 (Treeherder build). Tests were performed on Ubuntu 24.04 and Windows 11.

Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: