Bug 1928255 - Add an option to ignore transforms to GeometryUtils. r=layout-reviewers,webidl,saschanaz,jwatt, a=dmeehan

I want to mimic what anchor positioning will eventually do, and this is
how anchor positioning would behave. I want to use this to avoid having
to hack around it in a different way.

Differential Revision: https://phabricator.services.mozilla.com/D227757